--- a/main.html
+++ b/main.html
@@ -9,33 +9,31 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Exams</title>
+    <!-- My CSS -->
+    <link rel="stylesheet" type="text/css" href="my.css">
+    <title>ToDo Manager</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <!-- Pasted from Bootstrap.org -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container">
+        <nav class="row navbar navbar-expand-lg navbar-dark bg-success">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <a class="navbar-brand col-lg-4 col-auto" href="#">
                 <svg class="bi bi-check-all" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd"
-                        d="M12.354 3.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3.5-3.5a.5.5 0 11.708-.708L5 10.293l6.646-6.647a.5.5 0 01.708 0z"
-                        clip-rule="evenodd" />
-                    <path
-                        d="M6.25 8.043l-.896-.897a.5.5 0 10-.708.708l.897.896.707-.707zm1 2.414l.896.897a.5.5 0 00.708 0l7-7a.5.5 0 00-.708-.708L8.5 10.293l-.543-.543-.707.707z" />
+                    <path fill-rule="evenodd" d="M12.354 3.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3.5-3.5a.5.5 0 11.708-.708L5 10.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd" />
+                    <path d="M6.25 8.043l-.896-.897a.5.5 0 10-.708.708l.897.896.707-.707zm1 2.414l.896.897a.5.5 0 00.708 0l7-7a.5.5 0 00-.708-.708L8.5 10.293l-.543-.543-.707.707z" />
                 </svg> ToDo Manager
             </a>
-
             <div class="collapse navbar-collapse col-lg-7 col-auto" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                    <!-- Button to start the research:
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
                 </form>
-                <!-- <ul class="navbar-nav mr-auto">
+                <!-- Options to show in the collapsed menu:
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
@@ -58,84 +56,85 @@
                     </li>
                 </ul> -->
             </div>
-
-            <svg class="bi bi-people-circle text-white col-lg-1 col-auto" width="2em" height="2em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <svg class="bi bi-people-circle col-lg-1 col-auto" width="2em" height="2em" viewBox="0 0 16 16" fill="#B1D4B4" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13.468 12.37C12.758 11.226 11.195 10 8 10s-4.757 1.225-5.468 2.37A6.987 6.987 0 008 15a6.987 6.987 0 005.468-2.63z" />
                 <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
                 <path fill-rule="evenodd" d="M8 1a7 7 0 100 14A7 7 0 008 1zM0 8a8 8 0 1116 0A8 8 0 010 8z" clip-rule="evenodd" />
             </svg>
         </nav>
-
         <main>
             <div class="row">
-                <div class="d-none d-lg-block col-lg-4 col-auto">
+                <div class="d-none d-lg-block col-lg-4 col-auto aside">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-action active">All</li>
-                        <li class="list-group-item list-group-item-action">Important</li>
-                        <li class="list-group-item list-group-item-action">Today</li>
-                        <li class="list-group-item list-group-item-action">Next 7 Days</li>
-                        <li class="list-group-item list-group-item-action">Private</li>
-                        <li class="list-group-item list-group-item-action">Shared with...</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action active">All</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Important</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Today</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Next 7 Days</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Private</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Shared with...</li>
                     </ul>
                     <br>
                     <br>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><strong>Projects</strong></li>
-                        <li class="list-group-item list-group-item-action">Web Applications I</li>
-                        <li class="list-group-item list-group-item-action">Personal</li>
+                        <li class="list-group-item list-group-item-light"><strong>Projects</strong></li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Web Applications I</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action">Personal</li>
                     </ul>
                 </div>
-                <div class="col-lg-8 col-auto">
-                    <header class="">
-                        <h1>All</h1>
-                    </header>
+                <div class="col-lg-8 col-md col-auto content">
+                    <div class="row title">
+                        <div class="col">
+                            <h1>All</h1>
+                        </div>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item list-group-item-light">
+                            <div class="row">
+                                <div class="form-check col-lg-6 col">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                    <label class="form-check-label" for="defaultCheck1">Complete Lab 2</label>
+                                    <span class="badge badge-primary">Web Applications I</span>
+                                </div>
+                                <div class="deadline col-lg-6 col">
+                                    <p>Friday 27 March 2020 at 11:30</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item list-group-item-light">
+                            <div class="row">
+                                <div class="form-check col-lg-6 col">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                    <label class="form-check-label" for="defaultCheck2">Buy some groceries</label>
+                                    <span class="badge badge-success">Personal</span>
+                                </div>
+                                <div class="deadline col-lg-6 col">
+                                    <p><a href="#" class="badge badge-dark"><svg class="bi bi-person-square" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd" />
+                                    <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
+                                    </svg></a> Today at 14:00 </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item list-group-item-light">
+                            <div class="row">
+                                <div class="form-check col-lg-6 col">
+                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
+                                    <label class="form-check-label" for="defaultCheck3">Read a good book</label>
+                                </div>
+                                <div class="deadline col-lg-6 col">
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-success btn-add">+</button>
+                    <!-- Alternative '+' button:
+                        <svg class="bi bi-plus-circle-fill btn-add-task" width="3em" height="3em" viewBox="0 0 16 16" fill="#28a745" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM8.5 4a.5.5 0 00-1 0v3.5H4a.5.5 0 000 1h3.5V12a.5.5 0 001 0V8.5H12a.5.5 0 000-1H8.5V4z" clip-rule="evenodd" />
+                        </svg> -->
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-md-8">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Exam</th>
-                                <th>Score</th>
-                                <th>Date</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Web Applications I</td>
-                                <td>30</td>
-                                <td>2020-03-24</td>
-                            </tr>
-                            <tr>
-                                <td>Computer Architectures</td>
-                                <td>30</td>
-                                <td>2020-03-24</td>
-                            </tr>
-                            <tr>
-                                <td>Data Science and Database Technology</td>
-                                <td>30</td>
-                                <td>2020-03-24</td>
-                            </tr>
-                            <tr>
-                                <td>Computer network technologies and services</td>
-                                <td>30</td>
-                                <td>2020-03-24</td>
-                            </tr>
-                        </tbody>
-                        <caption>Current exams and scores</caption>
-                    </table>
-                </div>
-
-                <div class="col-md-4 bg-light">
-                    <p>List of the exams, and some statistics</p>
-                </div>
-            </div> -->
         </main>
     </div>
-    <footer>
-
-    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
