--- a/main.html
+++ b/main.html
@@ -82,58 +82,70 @@
                     </ul>
                 </div>
                 <div class="col-lg-8 col-md col-auto content">
-                    <div class="row title">
+                    <div class="row header-section">
                         <div class="col">
                             <h1>All</h1>
                         </div>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-light">
-                            <div class="row">
-                                <div class="form-check col-lg-6 col">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-                                    <label class="form-check-label" for="defaultCheck1">Complete Lab 2</label>
-                                    <span class="badge badge-primary">Web Applications I</span>
+                    <div class="row middle-section">
+                        <ul class="list-group list-group-flush col-lg-12 col">
+                            <li class="list-group-item list-group-item-light">
+                                <div class="row">
+                                    <div class="form-check col-lg-6 col">
+                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                                        <label class="form-check-label" for="defaultCheck1">Complete Lab 2</label>
+                                        <span class="badge badge-primary">Web Applications I</span>
+                                    </div>
+                                    <div class="deadline col-lg-6 col">
+                                        <p>Friday 27 March 2020 at 11:30</p>
+                                    </div>
                                 </div>
-                                <div class="deadline col-lg-6 col">
-                                    <p>Friday 27 March 2020 at 11:30</p>
+                            </li>
+                            <li class="list-group-item list-group-item-light">
+                                <div class="row">
+                                    <div class="form-check col-lg-6 col">
+                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                                        <label class="form-check-label" for="defaultCheck2">Buy some groceries</label>
+                                        <span class="badge badge-success">Personal</span>
+                                    </div>
+                                    <div class="deadline col-lg-6 col">
+                                        <p><a href="#" class="badge badge-dark"><svg class="bi bi-person-square" width="1.5em" height="1.5em"
+                                                    viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd"
+                                                        d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z"
+                                                        clip-rule="evenodd" />
+                                                    <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 100-6 3 3 0 000 6z"
+                                                        clip-rule="evenodd" />
+                                                </svg></a> Today at 14:00 </p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item list-group-item-light">
-                            <div class="row">
-                                <div class="form-check col-lg-6 col">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
-                                    <label class="form-check-label" for="defaultCheck2">Buy some groceries</label>
-                                    <span class="badge badge-success">Personal</span>
+                            </li>
+                            <li class="list-group-item list-group-item-light">
+                                <div class="row">
+                                    <div class="form-check col-lg-6 col">
+                                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
+                                        <label class="form-check-label" for="defaultCheck3">Read a good book</label>
+                                    </div>
+                                    <div class="deadline col-lg-6 col">
+                                    </div>
                                 </div>
-                                <div class="deadline col-lg-6 col">
-                                    <p><a href="#" class="badge badge-dark"><svg class="bi bi-person-square" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z" clip-rule="evenodd" />
-                                    <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd" />
-                                    </svg></a> Today at 14:00 </p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="list-group-item list-group-item-light">
-                            <div class="row">
-                                <div class="form-check col-lg-6 col">
-                                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck3">
-                                    <label class="form-check-label" for="defaultCheck3">Read a good book</label>
-                                </div>
-                                <div class="deadline col-lg-6 col">
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
-                    <button type="button" class="btn btn-success btn-add">+</button>
-                    <!-- Alternative '+' button:
-                        <svg class="bi bi-plus-circle-fill btn-add-task" width="3em" height="3em" viewBox="0 0 16 16" fill="#28a745" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM8.5 4a.5.5 0 00-1 0v3.5H4a.5.5 0 000 1h3.5V12a.5.5 0 001 0V8.5H12a.5.5 0 000-1H8.5V4z" clip-rule="evenodd" />
-                        </svg> -->
+                            </li>
+                        </ul>
+                    </div>
+                    <footer class="row bottom-section">
+                        <div class="col">
+                            <button type="button" class="btn btn-success btn-add-task">+</button>
+                            <!-- Alternative `+` button:
+                            <svg class="bi bi-plus-circle-fill btn-add-task" width="3em" height="3em" viewBox="0 0 16 16" fill="#28a745" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM8.5 4a.5.5 0 00-1 0v3.5H4a.5.5 0 000 1h3.5V12a.5.5 0 001 0V8.5H12a.5.5 0 000-1H8.5V4z" clip-rule="evenodd" />
+                            </svg> -->
+                        </div>
+                    </footer>
                 </div>
+
             </div>
-        </main>
+    </div>
+    </main>
     </div>
 
     <!-- Optional JavaScript -->
