-new configuration in .vscode;\n-started lab3-js;\n-populate task list section from array in external .js (req. 1)\n-filters working (all & important)

--- a/lab3-js/index.html
+++ b/lab3-js/index.html
@@ -9,8 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- My CSS -->
-    <link rel="stylesheet" type="text/css" href="my.css">
+    <!-- My CSS files -->
+    <link rel="stylesheet" type="text/css" href="custom.css">
     <title>ToDo Manager</title>
 </head>
 
@@ -29,8 +29,6 @@
             <div class="collapse navbar-collapse col-lg-7 col-auto" id="navbarSupportedContent">
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <!-- Button to start the research:
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
                 </form>
                 <!-- Options to show in the collapsed menu: -->
                 <ul class="navbar-nav mr-auto d-lg-none">
@@ -52,12 +50,12 @@
             <div class="row">
                 <div class="d-none d-lg-block col-lg-4 col-auto aside">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item list-group-item-light list-group-item-action active">All</li>
-                        <li class="list-group-item list-group-item-light list-group-item-action">Important</li>
-                        <li class="list-group-item list-group-item-light list-group-item-action">Today</li>
-                        <li class="list-group-item list-group-item-light list-group-item-action">Next 7 Days</li>
-                        <li class="list-group-item list-group-item-light list-group-item-action">Private</li>
-                        <li class="list-group-item list-group-item-light list-group-item-action">Shared with...</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action active" id="aside-all">All</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action" id="aside-important">Important</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action" id="aside-today">Today</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action" id="aside-next7days">Next 7 Days</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action" id="aside-private">Private</li>
+                        <li class="list-group-item list-group-item-light list-group-item-action" id="aside-shared">Shared with...</li>
                     </ul>
                     <br>
                     <br>
@@ -75,44 +73,15 @@
                     </div>
                     <div class="row middle-section">
                         <ul class="list-group list-group-flush col-lg-12 col">
-                            <li class="list-group-item list-group-item-light">
+                            <li class="list-group-item list-group-item-light" id="taskTemplate" style="display: none;">
                                 <div class="row">
-                                    <div class="custom-control custom-checkbox col-lg-6 col">
-                                        <input class="custom-control-input" type="checkbox" value="" id="defaultCheck1">
-                                        <label class="custom-control-label" for="defaultCheck1">Complete Lab 2</label>
-                                        <span class="badge badge-primary">Web Applications I</span>
+                                    <div class="task custom-control custom-checkbox col-lg-6 col">
+                                        <input class="custom-control-input" type="checkbox" value="" id="defaultCheck">
+                                        <label class="custom-control-label" for="defaultCheck"></label>
+                                        <span class="badge badge-primary"></span>
                                     </div>
                                     <div class="deadline col-lg-6 col">
-                                        <p>Friday 27 March 2020 at 11:30</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item list-group-item-light">
-                                <div class="row">
-                                    <div class="custom-control custom-checkbox col-lg-6 col">
-                                        <input class="custom-control-input" type="checkbox" value="" id="defaultCheck2">
-                                        <label class="custom-control-label" for="defaultCheck2">Buy some groceries</label>
-                                        <span class="badge badge-success">Personal</span>
-                                    </div>
-                                    <div class="deadline col-lg-6 col">
-                                        <p><a href="#" class="badge badge-dark"><svg class="bi bi-person-square" width="1.5em" height="1.5em"
-                                                    viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                    <path fill-rule="evenodd"
-                                                        d="M14 1H2a1 1 0 00-1 1v12a1 1 0 001 1h12a1 1 0 001-1V2a1 1 0 00-1-1zM2 0a2 2 0 00-2 2v12a2 2 0 002 2h12a2 2 0 002-2V2a2 2 0 00-2-2H2z"
-                                                        clip-rule="evenodd" />
-                                                    <path fill-rule="evenodd" d="M2 15v-1c0-1 1-4 6-4s6 3 6 4v1H2zm6-6a3 3 0 100-6 3 3 0 000 6z"
-                                                        clip-rule="evenodd" />
-                                                </svg></a> Today at 14:00 </p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="list-group-item list-group-item-light">
-                                <div class="row">
-                                    <div class="custom-control custom-checkbox col-lg-6 col">
-                                        <input class="custom-control-input important" type="checkbox" value="" id="defaultCheck3">
-                                        <label class="custom-control-label" for="defaultCheck3">Read a good book</label>
-                                    </div>
-                                    <div class="deadline col-lg-6 col">
+                                        <p></p>
                                     </div>
                                 </div>
                             </li>
@@ -121,19 +90,14 @@
                     <footer class="row bottom-section">
                         <div class="col">
                             <button type="button" class="btn btn-success btn-add-task">+</button>
-                            <!-- Alternative `+` button:
-                            <svg class="bi bi-plus-circle-fill btn-add-task" width="3em" height="3em" viewBox="0 0 16 16" fill="#28a745" xmlns="http://www.w3.org/2000/svg">
-                                <path fill-rule="evenodd" d="M16 8A8 8 0 110 8a8 8 0 0116 0zM8.5 4a.5.5 0 00-1 0v3.5H4a.5.5 0 000 1h3.5V12a.5.5 0 001 0V8.5H12a.5.5 0 000-1H8.5V4z" clip-rule="evenodd" />
-                            </svg> -->
                         </div>
                     </footer>
                 </div>
-
             </div>
+        </main>
     </div>
-    </main>
-    </div>
-
+    <!-- Custom JS -->
+    <script src="tasks.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
